<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_background">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_mercadolivre"
        app:layout_constraintBottom_toTopOf="@+id/amount_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount_text"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:digits="0123456789."
        android:inputType="numberDecimal"
        android:background="@color/whiteColor"
        android:imeOptions="actionDone"
        android:gravity="center"
        android:hint="@string/price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/card_select"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/whiteColor"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/select_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_text"
        app:layout_constraintVertical_bias="0.0"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <ImageView
        android:id="@+id/card_select_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_select"
        app:layout_constraintStart_toStartOf="@+id/card_select"
        app:layout_constraintTop_toTopOf="@+id/card_select"/>

    <TextView
        android:id="@+id/bank_select"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="49dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/whiteColor"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/select_bank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_select"
        app:layout_constraintVertical_bias="0.0"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <ImageView
        android:id="@+id/bank_select_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/bank_select"
        app:layout_constraintStart_toStartOf="@+id/bank_select"
        app:layout_constraintTop_toTopOf="@+id/bank_select"/>

    <TextView
        android:id="@+id/installments_select"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="2dp"
        android:visibility="gone"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/whiteColor"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/select_installments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_select"
        app:layout_constraintVertical_bias="0.0"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <Button
        android:id="@+id/reset_button"
        android:theme="@style/RetryButton"
        android:textColor="@color/whiteColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/installments_select"
        app:layout_constraintVertical_bias="0.583"
        android:text="@string/resert_button"
        android:foreground="?android:attr/selectableItemBackground"
        />

</android.support.constraint.ConstraintLayout>